Add more feature on increment

--- a/increment/index.html
+++ b/increment/index.html
@@ -12,7 +12,9 @@
         <h1 id="count">0</h1>
         <button id="decrement-btn" onclick="decrement()">-</button>
         <button id="increment-btn" onclick="increment()">+</button>
+        <button id="save-btn" onclick="save()">Save</button>
+        <h3 id="entry">Subway Entries: </h3>
     </center>
-    <script src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
