--- a/leads_tracker/index.html
+++ b/leads_tracker/index.html
@@ -9,6 +9,7 @@
 <body>
     <input type="text" id="input-el">
     <button id="input-btn" >SAVE INPUT</button>
+    <button id="tab-btn" >SAVE TAB</button>
     <button id="clear-btn">Clear Leads</button>
     <ul>
     </ul>
