Add remove button

--- a/invoice_creator/index.html
+++ b/invoice_creator/index.html
@@ -27,14 +27,7 @@
                 <div class="orders">
                     <div class="order-1 order">
                         <h6 class="name">Mow Lawn</h6>
-                        <h6 class="price">$10</h6>
-                    </div>
-                    <div class="order-1 order">
-                        <h6 class="name">Mow Lawn</h6>
-                        <h6 class="price">$10</h6>
-                    </div>
-                    <div class="order-1 order">
-                        <h6 class="name">Mow Lawn</h6>
+                        <h6 class="remove-btn">Remove</h6>
                         <h6 class="price">$10</h6>
                     </div>
                 </div>
