--- a/invoice_creator/index.html
+++ b/invoice_creator/index.html
@@ -25,11 +25,6 @@
                     <h6 class="total-h">TOTAL</h6>
                 </div>
                 <div class="orders">
-                    <div class="order-1 order">
-                        <h6 class="name">Mow Lawn</h6>
-                        <h6 class="remove-btn">Remove</h6>
-                        <h6 class="price">$10</h6>
-                    </div>
                 </div>
 
                 <hr>
@@ -40,7 +35,7 @@
                 </div>
                 <div class="notes">
                     <h6 class="note">We accept cash, credit card, or PayPal</h6>
-                    <h6 class="total">$50</h6>
+                    <h6 class="total"></h6>
                 </div>
                 <button class="send-invoice">Send invoice</button>
             </div>
